--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>bupt.edu.jhc</groupId>
-    <artifactId>apicloud-client-sdk</artifactId>
+    <groupId>com.jhc</groupId>
+    <artifactId>csbot-interpreter-sdk</artifactId>
     <version>0.0.1</version>
-    <name>apicloud-client-sdk</name>
-    <description>API 接口云---客户端 SDK</description>
+    <name>csbot-interpreter-sdk</name>
+    <description>客服机器人---脚本解释器 SDK</description>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
